# roshydro

./: frames.gv  table_scene_lms400_hull.pcd  table_scene_lms400_projection.pcd
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
devel/include/hector_nav_msgs/: GetDistanceToObstacle.h  GetDistanceToObstacleRequest.h  GetDistanceToObstacleResponse.h  GetNormal.h  GetNormalRequest.h  GetNormalResponse.h  GetRecoveryInfo.h  GetRecoveryInfoRequest.h  (+7 more)
src/: CMakeLists.txt  video  wandboard_test_joystick_drive.launch
src/.joy_teleop/: joystick_teleop.launch
src/bug_pathing/: CMakeLists.txt  CMakeLists.txt~  README.txt  package.xml
src/joy_teleop/: CMakeLists.txt  package.xml
src/kinect_pathing/: CMakeLists.txt  README.txt
src/kinect_pathing/include/: kinect_pathing.h
src/kinect_pathing/launch/: kinect_pathing.launch
src/kinect_pathing/src/: convex_hull.cpp  extract_path.cpp  kinect_clouds_pub.cpp  kinect_pathing.cpp  kinect_waypoint_pub.cpp  move_to_waypoint.cpp  tf_broadcaster.cpp
src/localization_launch/: wandboard_localization_amcl_client.launch  wandboard_localization_amcl_server.launch
src/mapping_launch/: wandboard_gmapping_odom_server.launch  wandboard_hector_mapping_odom_client.launch  wandboard_hector_mapping_odom_server.launch  wandboard_record_gmap_from_bag.launch
src/odom_broadcaster/: CMakeLists.txt
src/range_broadcaster/: CMakeLists.txt  package.xml
src/simple_obstacle_pathing/: CMakeLists.txt  package.xml  wandboard_simple_obstacle_pathing_client.launch  wandboard_simple_obstacle_pathing_server.launch
src/tf_sensors/: CMakeLists.txt  package.xml
src/visual_odometry_launch/: visual_odometry_node.launch  wandboard_visual_odometry.launch
(+135 files in other folders)
